tests/checker/ok/dispatch_through_newtype_option.can
Content = String

MessageContent = Option<Content>

describe = (MessageContent) => String {
    MessageContent -> (
        * None => String { "absent" }
        * Some<Content> => String { "present" }
    )
}

Unit => Program {
    "ok" -> Print
}
