tests/checker/fail/conjured_capability.can
Unit => Program {
    "hi".print(Stdout)
}
